force-app/main/default/objects/Account/fields/Comma_Separated_Values__c.field-meta.xml
<CustomField>
    <fullName>Comma_Separated_Values__c</fullName>
    <label>Comma Separated Values</label>
    <length>200</length>
    <type>Text</type>
</CustomField>