force-app/main/default/objects/Account/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <label>Contact Information</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>