force-app/main/default/objects/Account/fields/Most_Recent_Address__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Address__c</fullName>
    <label>Most Recent Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>