force-app/main/default/objects/Account/fields/MyDate__c.field-meta.xml
<CustomField>
    <fullName>MyDate__c</fullName>
    <label>MyDate</label>
    <type>Date</type>
</CustomField>