force-app/main/default/objects/Account/fields/Need_Intel__c.field-meta.xml
<CustomField>
    <fullName>Need_Intel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Intel</label>
    <type>Checkbox</type>
</CustomField>