force-app/main/default/objects/Account/fields/Rollup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Amount__c</fullName>
    <formula>Rollup_Amount_X__c  +  Rollup_Amount_Y__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rollup_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>