force-app/main/default/objects/Account/fields/Rollup_Amount_Y__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Amount_Y__c</fullName>
    <label>Rollup_Amount_Y</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>