force-app/main/default/objects/Account/recordTypes/Test_Account.recordType-meta.xml
<RecordType>
    <fullName>Test_Account</fullName>
    <active>false</active>
    <label>Test Account</label>
</RecordType>